--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -12,26 +12,29 @@
     <header>
       <h1>Travel Info</h1>
     </header>
-    <div class="holder form">
-      <form id="form-date">
-        <div class="holder city">
-          <label for="city">Enter a city here:</label>
-          <input type="text" id="city">
-        </div>
-        <div class="holdder date">
-          <label for="datetime">Enter the date:</label>
-          <input type="datetime" id="date" pattern="([12]\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01]))" placeholder="YYYY-MM-DD" required>
-        </div>
-        <button id="generate" type="submit">Submit</button>
-      </form>
-    </div>
-    <div class="holder entry">
-      <div class="title">Most Recent Entry</div>
-      <div id="entryHolder">
-        <div id="temp"></div>
-        <div id="content"></div>
+    <main>
+      <div class="holder form">
+        <form id="form-date">
+          <div class="holder city">
+            <label for="city">Enter a city here:</label>
+            <input type="text" id="city">
+          </div>
+          <div class="holder date">
+            <label for="datetime">Enter the date:</label>
+            <input type="datetime" id="date" pattern="([12]\d{3}-(0[1-9]|1[0-2])-(0[1-9]|[12]\d|3[01]))" placeholder="YYYY-MM-DD" required>
+          </div>
+          <button id="generate" type="submit">Submit</button>
+        </form>
       </div>
-    </div>
+      <div class="holder entry">
+        <div class="title">Most Recent Entry</div>
+        <div id="entryHolder">
+          <div id="temp"></div>
+          <div id="content"></div>
+        </div>
+      </div>
+    </main>
+    <footer>test</footer>
   </div>
 
 </body>
