--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -5,26 +5,37 @@
 @import url(https://fonts.googleapis.com/css2?family=Lobster&family=Roboto:wght@400;700&display=swap);
 
 /* varibles */
-$main-bg-color: #d6986d;
-$sub-bg-color: #333;
+$main-color: #bd7848;
+$sub-color: #333;
+$font-main-color: #fff;
 $font-lobster: "Lobster", cursive, sans-serif;
 
 /* global */
 body {
     font: 16px/1.4 "Roboto", sans-serif;
     margin: 0;
+    color: $font-main-color;
 }
 
 
 #app {
     display: grid;
-    grid-template-rows: 10vh minmax(50vh, 80vh) 10vh;
+    grid-template-rows: 14vh min($numbers: 76vh) 10vh;
+}
+
+h1, #form-date, .entry, footer {
+    padding: 14px;
 }
 
 /*#app {
     display: grid;
     grid-template-rows: 20vh minmax(50vh, 70vh) 10vh;
 }*/
+
+header {
+    align-self: center;
+    color: $main-color;
+}
 
 
 /*h1 {
@@ -34,10 +45,40 @@ body {
 
 
 main {
-    background-color: $main-bg-color;
+    background-color: $main-color;
+    display: grid;
+    grid-template-rows: 230px auto;;
+
+    #form-date {
+        display: grid;
+        grid-template-rows: repeat(3, 1fr);
+        align-items: center;
+
+        input, button {
+            margin-top: 5px;
+            border-radius: 4px;
+            border: #333;
+            height: 20px;
+            padding: 4px 8px;
+            width: 200px;
+        }
+
+        button {
+            width: auto;
+            height: 28px;
+            background-color: #23191173;
+            color: $font-main-color;
+            font-weight: bold;
+
+            &:hover {
+                color: $main-color;
+                background-color: $font-main-color;
+            }
+        }
+    }
 }
 
 
 footer {
-    background-color: $sub-bg-color;
+    background-color: $sub-color;
 }
