--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -23,7 +23,7 @@ body {
     grid-template-rows: 14vh min($numbers: 76vh) 10vh;
 }
 
-h1, #form-date, .entry, footer {
+h1, #form, .entry, footer {
     padding: 14px;
 }
 
@@ -49,7 +49,7 @@ main {
     display: grid;
     grid-template-rows: 230px auto;;
 
-    #form-date {
+    #form {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
         align-items: center;
