--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travel App</title>
+  <title>Travel Planner</title>
   <link href="https://fonts.googleapis.com/css?family=Oswald:400,600,700|Ranga:400,700&display=swap" rel="stylesheet">
 </head>
 
 <body>
   <div id="app">
     <header>
-      <h1>Travel App</h1>
+      <h1>Travel Planner</h1>
     </header>
     <main>
       <form id="form">
@@ -25,11 +25,15 @@
         <button id="generate" type="submit">Submit</button>
       </form>
       <div class="holder entry">
-        <h2>Travel Info</h2>
+        <h2 id="weather-info"></h2>
         <div id="entryHolder">
-          <div id="days-counter"></div>
+          <div id="country"></div>
           <div id="temp"></div>
-          <div id="content"></div>
+          <div id="description"></div>
+          <div id="days-counter"></div>
+          <div id="city-img">
+            <img>
+          </div>
         </div>
       </div>
     </main>
