--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -32,7 +32,10 @@
           <div id="description"></div>
           <div id="days-counter"></div>
           <div id="city-img">
-            <img>
+            <figure>
+              <img alt="">
+              <figcaption></figcaption>
+            </figure>
           </div>
         </div>
       </div>
