--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -14,36 +14,29 @@ $font-lobster: "Lobster", cursive, sans-serif;
 body {
     font: 16px/1.4 "Roboto", sans-serif;
     margin: 0;
-    color: $font-main-color;
-}
-
-
-#app {
-    display: grid;
-    grid-template-rows: 14vh minmax(76vh, auto) 10vh;
 }
 
 h1, #form, .entry, footer {
     padding: 14px;
 }
 
-/*#app {
-    display: grid;
-    grid-template-rows: 20vh minmax(50vh, 70vh) 10vh;
-}*/
 
+/* pages's container */
+#app {
+    display: grid;
+    grid-template-rows: 16vh minmax(74vh, auto) minmax(10vh, auto);
+    color: $font-main-color;
+}
+
+
+/* header */
 header {
     align-self: center;
     color: $main-color;
 }
 
 
-/*h1 {
-    font-family: $font-lobster;
-    font-size: 50px;
-}*/
-
-
+/* main */
 main {
     background-color: $main-color;
     display: grid;
@@ -87,19 +80,30 @@ main {
     }
 }
 
+
+/* footer */
 footer {
+    display: flex;
+    justify-content: space-evenly;
     background-color: $sub-color;
+
+    span {
+        color: $main-color
+    }
 }
+
 
 /* media query */ /* the dimensions are from bootstrap */
 
-// $phones: 576px;
-// @media (min-width: $phones) {
-//     .container-sm {
-//         width: 540px;
-//     }
+$phones: 768px;
+@media (min-width: $phones) {
+    .container {
+        width: 768px;
+        margin: auto;
+    }
 
-//     h2 {
-//         color : red
-//     }
-// }
+    h1 {
+        font-family: $font-lobster;
+        font-size: 50px;
+    }
+}
