--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div id="app">
+  <div id="app" class="container">
     <header>
       <h1>Travel Planner</h1>
     </header>
@@ -40,7 +40,10 @@
         </div>
       </div>
     </main>
-    <footer>test</footer>
+    <footer>
+      <div class="author">made with <span>&hearts;</span> by Yamen</div>
+      <div class="date-made">All rights reserved &copy; 4/15/2020</div>
+    </footer>
   </div>
 
 </body>
