--- a/src/client/styles/style.scss
+++ b/src/client/styles/style.scss
@@ -85,6 +85,7 @@ main {
 footer {
     display: flex;
     justify-content: space-evenly;
+    align-items: center;
     background-color: $sub-color;
 
     span {
